# sw_tools

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
analysis/: .gitignore  README.md  README_create_binary.md  analysis_plots.py  dataformats.py  larus_analyzer.py  larus_to_df.py  load_to_df.py  plot_essentials.py  plot_mag.py  plot_regression.py  plot_track.py  plot_vario.py  plot_wind.py  process_to_df.py  requirements.txt  setup.py
analysis/_internal/: README.md
can_helper/: can_adapter.py
flight_player/: activate_can.sh  baro_widget.py  can_bus.py  dataformats.py  details.ui  details_ui.py  flight_data.py  flight_player.py  log_window.py  logger.py  mainwindow.py  nmea.py  player.py  player.ui  player_ui.py  readme.md
flight_player/can_bus/: data.py  generic_settings.py  interface.py  legacy.py  new.py  sensor_box.py
flight_player/udev/: 88-init_CAN.rules  initialize_CAN.sh  readme.md
larus_data/: README.md  larus_to_df.py
larus_data/_internal/: README.md  data_analyzer_lib_linux_tag_v0.1.0  data_analyzer_lib_linux_tag_v0.1.1  data_analyzer_lib_linux_tag_v0.1.2  data_analyzer_lib_linux_tag_v0.2.1  data_analyzer_lib_linux_tag_v0.2.2  data_analyzer_lib_linux_tag_v0.2.3  data_analyzer_lib_linux_tag_v0.3.0
sensor_data_analyzer/: .#load_file.m  .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  README.md  larus_emulator.vcxproj.user.in  log_channels.ods  log_channels_50_2022.ods  plot_NAV_MAG.m  plot_NAV_MAG_parallel.m  sat_mag_diff.m
sensor_data_analyzer/Communication/: CAN_USB_gateway.cpp  CAN_output.cpp  CAN_output.h  USB_serial.cpp  USB_serial.h
sensor_data_analyzer/Generic_Algorithms/: Linear_Least_Square_Fit.h
sensor_data_analyzer/Interfaces/: EEPROM_emulation.cpp  EEPROM_emulation.h  persistent_data_file_emulation.cpp  persistent_data_file_emulation.h
sensor_data_analyzer/Matlab/: Sxy_durch_Sxx.m  attitude_error.m  compare_nav_acc.m  load_file.m  plot_NAV_MAG.m  plot_NAV_MAG_parallel.m  plot_gyro_corrections.m  plot_mag_heading_error.m  plot_vario.m  vario_speed_comp_tuning.m  wind_vector_visualization.m
sensor_data_analyzer/Matlab/Filter_Tuning/: Kalman_XVA_acc_offset.m  kalman_vario.m  kalman_vario_XVA.m  vario_speed_comp_tuning.m
sensor_data_analyzer/Module_Testers/: ftoa_tester.cpp
sensor_data_analyzer/NAV_Algorithms/: AHRS.cpp  air_density_observer.cpp  air_density_observer.h  atmosphere.h  flight_observer.cpp  flight_observer.h  navigator.cpp  navigator.h  organizer.h
sensor_data_analyzer/src/: CAN_socket_driver.cpp  CAN_socket_driver.h  EEPROM_emulation.cpp  EEPROM_emulation.h  TCP_server.cpp  TCP_server.h  atof_tester.cpp  compass_calibration.h  data_structures.h  embedded_math.h  embedded_memory.h  ftoa_tester.cpp  mainpage.h  mutex_implementation.h  old_data_structures.h  persistent_data.cpp  persistent_data_file.cpp  persistent_data_file.h  persistent_data_file_tester.cpp  sensor_data_analyzer.cpp  system_configuration.h
sensor_simulator/: CMakeLists.txt  README.md
sensor_simulator/src/: CAN_USB_gateway.cpp  EEPROM_emulation.cpp  TCP_server.h  UDP_server.cpp  UDP_server.h  USB_serial.h  helper.cpp  helper.h  main.cpp  mainpage.h  system_configuration.h
sw_update/: memory.x.app  pack.toml  readme.md  stm32h743_1m.code-workspace  vario.elf
sw_update/assets/: copy_stm32h743_1m.elf  memory_map.ods
sw_update/common/: meta_v1.rs
sw_update/src/: app.rs  copy.rs
sw_update/stm32f407_1m-806/: Cargo.toml  copy_stm32f407_1m-806.elf  memory.x
sw_update/stm32f407_1m-806/.cargo/: config.toml
sw_update/stm32f407_1m-806/src/: main.rs
sw_update/stm32h743_1m/: Cargo.toml  copy.elf  memory.x.app  memory.x.copy
sw_update/stm32h743_1m/.cargo/: config
sw_update/stm32h743_1m/examples/: copy.rs
sw_update/stm32h743_1m/src/: main.rs
(+4 files in other folders)
