[package]
name = "copy"
categories = ["embedded", "no-std"]
description = "Flash Copy Routine"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
nb = "1"
embedded-hal = "0.2"
embedded-storage = "0.2.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407"] }

# this lets you use `cargo fix`!
[[bin]]
name = "copy"
test = false
bench = false

#[profile.dev]
#opt-level = 1
#codegen-units = 16
#debug = true
#lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations