[package]
name = "copy"
version = "0.0.1"
authors = ["Winfried Simon <winfried.simon@gmail.com>"]
edition = "2021"


[dependencies]

# cortex m
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6.15,<0.8"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# hardware specific
stm32h7xx-hal = { version = "0.15.1", features = ["rt", "stm32h743"] }

# other libraries
embedded-storage = "0.3"

# local

[[bin]]
name = "copy"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
